[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/WashingMachineMinigame.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Open_ClothesFull.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Stalled_Base.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Stalled_Shock.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Base.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Closed_0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Closed_1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Closed_2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Closed_3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Open_Empty.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Open_ClothesLow.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Overlay_Sprite.Door_Open_ClothesMed.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Spacebar_Up.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Spacebar_Down.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Pants_0.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Pants_1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Pants_2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Shirt_0.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Shirt_1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Shirt_2.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Underwear_0.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Underwear_1.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Underwear_2.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Washing Machine Sprites/Minigame.WashingMachine.Action_Sprite.Throw_Clothes.Underwear_3.png" type="Texture" id=25]

[sub_resource type="DynamicFont" id=1]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Door Open Full Clothes",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Event Stalling",
"speed": 2.5
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Default State",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Door Closed Running",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Door Open Empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Door Open Low Clothes",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Door Open Med Clothes",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "LoadClothes",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=4]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), null ],
"loop": true,
"name": "Throw Pants",
"speed": 20.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), null ],
"loop": true,
"name": "Throw Shirt",
"speed": 20.0
}, {
"frames": [  ],
"loop": true,
"name": "Empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), null ],
"loop": true,
"name": "Throw Underwear",
"speed": 20.0
} ]

[node name="WashingMachineMinigame" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="TransparentLayer" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.414063, 0.414063, 0.414063, 0.509804 )

[node name="InstructionLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -57.0
margin_right = 80.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LOAD THE CLOTHES!"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="WashingMachineSprite" type="AnimatedSprite" parent="." index="2"]

position = Vector2( 120, 60 )
frames = SubResource( 2 )
animation = "Event Stalling"
_sections_unfolded = [ "Transform" ]

[node name="InputPrompt" type="AnimatedSprite" parent="." index="3"]

position = Vector2( 120, 140 )
frames = SubResource( 3 )
animation = "LoadClothes"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="WasherTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimeLabel" type="Label" parent="." index="5"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -56.0
margin_top = 11.0
margin_right = -16.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "120"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Clothing" type="AnimatedSprite" parent="." index="6"]

position = Vector2( 120.713, 89.7284 )
frames = SubResource( 5 )
animation = "Throw Shirt"

[connection signal="frame_changed" from="WashingMachineSprite" to="." method="_on_WashingMachineSprite_frame_changed"]

[connection signal="timeout" from="WasherTimer" to="." method="_on_WasherTimer_timeout"]

[connection signal="animation_finished" from="Clothing" to="." method="_on_Clothing_animation_finished"]


